# mail-controller

./: README.md  pyproject.toml
src/mail/: mail.py
